<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/top_holder"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="70dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nameTV"
                android:text="Hi Kim,"
                android:textColor="@color/black"
                android:fontFamily="@font/raleway_bold"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:text="How are you feeling today?"
                android:textColor="@color/black"
                android:textSize="24sp"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="40dp"

            >
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:clickable="true"
                android:layout_marginVertical="10dp"
                android:focusable="true"
                app:rippleColor="@color/view_all_purple"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/worst_face"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Meh"
                        android:textColor="@color/black"
                        android:fontFamily="@font/raleway_semibold"
                        android:textSize="18dp"
                        android:layout_marginTop="5dp"/>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:clickable="true"
                android:layout_marginVertical="10dp"
                android:focusable="true"
                app:rippleColor="@color/view_all_purple"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/sad_face"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bad"
                        android:textColor="@color/black"
                        android:fontFamily="@font/raleway_semibold"
                        android:textSize="18dp"
                        android:layout_marginTop="5dp"/>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:clickable="true"
                android:layout_marginVertical="10dp"
                android:focusable="true"
                app:rippleColor="@color/view_all_purple"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/grining_face"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Good"
                        android:textColor="@color/black"
                        android:fontFamily="@font/raleway_semibold"
                        android:textSize="18dp"
                        android:layout_marginTop="5dp"/>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginVertical="10dp"
                app:rippleColor="@color/view_all_purple"
                android:layout_marginHorizontal="10dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/heart_face"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Lovely"
                        android:textColor="@color/black"
                        android:fontFamily="@font/raleway_semibold"
                        android:textSize="18dp"
                        android:layout_marginTop="5dp"/>


                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>


    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/thoughts_of_the_day"
                android:textColor="@color/blue_main"
                android:textSize="20sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/raleway_bold"
                android:text="@string/view_all"
                android:textColor="@color/view_all_purple"
                android:textSize="15sp" />

        </RelativeLayout>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="20dp"
            android:backgroundTint="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@drawable/post_bg">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/raleway_bold"
                        android:text="What you thinkin' bout?"
                        android:textColor="@color/black"
                        android:textSize="24dp" />

                    <com.google.android.material.button.MaterialButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/raleway_bold"
                        android:text="Create Post"
                        android:textAllCaps="false"
                        android:textColor="@color/blue_main"
                        app:cornerRadius="10dp"
                        app:strokeColor="@color/blue_main"
                        app:strokeWidth="1dp" />


                </LinearLayout>


            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/recently_played"
            android:layout_marginStart="20dp"
            android:textColor="@color/blue_main"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/rp_card"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:id="@+id/recyclerView"/>


    </LinearLayout>




</LinearLayout>
</ScrollView>